Closed
Bug 633383
Opened 15 years ago
Closed 15 years ago
[Mac] Firefox 4.0b12pre crash [@ NS_StackWalk ]
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(blocking2.0 betaN+)
RESOLVED
FIXED
mozilla2.0b12
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | betaN+ |
People
(Reporter: marcia, Assigned: ehsan.akhgari)
References
()
Details
(Keywords: crash, reproducible, topcrash, Whiteboard: [hardblocker])
Crash Data
Attachments
(1 file)
|
775 bytes,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
Seen while running Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b12pre) Gecko/20110210 Firefox/4.0b12pre. Using Flash Version: 10.2.152.26
https://crash-stats.mozilla.com/report/index/bp-93d45d0c-83f0-4c09-a4f5-8689b2110210
STR:
1. Load site in URL
2. Crash on load. Sometimes there is some uptime and then you crash.
http://english.aljazeera.net/watch_now/ is another site where the same thing happens. This has been called out on input and twitter.
Frame Module Signature [Expand] Source
0 XUL NS_StackWalk xpcom/base/nsStackWalk.cpp:1488
1 XUL nsTraceRefcntImpl::WalkTheStack xpcom/base/nsTraceRefcntImpl.cpp:891
2 XUL NS_DebugBreak_P xpcom/base/nsDebugImpl.cpp:347
3 XUL mozilla::plugins::PPluginInstanceChild::FatalError PPluginInstanceChild.cpp:2167
4 XUL mozilla::plugins::PPluginInstanceChild::OnCallReceived PPluginInstanceChild.cpp:1744
5 XUL mozilla::plugins::PPluginModuleChild::OnCallReceived PPluginModuleChild.cpp:574
6 XUL mozilla::ipc::RPCChannel::DispatchIncall ipc/glue/RPCChannel.cpp:512
7 XUL mozilla::ipc::RPCChannel::OnMaybeDequeueOne ipc/glue/RPCChannel.cpp:429
8 XUL MessageLoop::DeferOrRunPendingTask ipc/chromium/src/base/message_loop.cc:343
9 XUL MessageLoop::DoWork ipc/chromium/src/base/message_loop.cc:451
10 XUL base::MessagePumpCFRunLoopBase::RunWorkSource ipc/chromium/src/base/message_pump_mac.mm:291
11 CoreFoundation __CFRunLoopDoSources0
12 CoreFoundation __CFRunLoopRun
13 CoreFoundation CFRunLoopRunSpecific
14 CoreFoundation CFRunLoopRunInMode
15 HIToolbox RunCurrentEventLoopInMode
16 HIToolbox ReceiveNextEventCommon
17 HIToolbox BlockUntilNextEventMatchingListInMode
18 AppKit _DPSNextEvent
19 AppKit -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:]
20 AppKit -[NSApplication run]
21 XUL base::MessagePumpNSApplication::DoRun ipc/chromium/src/base/message_pump_mac.mm:677
22 XUL base::MessagePumpCFRunLoopBase::Run ipc/chromium/src/base/message_pump_mac.mm:213
23 XUL MessageLoop::Run ipc/chromium/src/base/message_loop.cc:219
24 XUL XRE_InitChildProcess toolkit/xre/nsEmbedFunctions.cpp:515
25 plugin-container main ipc/app/MozillaRuntimeMain.cpp:80
26 plugin-container plugin-container@0xec5
27 @0x7
Comment 1•15 years ago
|
||
It is #7 top crasher on Mac OS X in 4.0b11.
blocking2.0: --- → ?
Keywords: topcrash
| Reporter | ||
Comment 2•15 years ago
|
||
So this appears to be a dupe of Bug 630409 (which was duped to Bug 630199), even though the stack I am getting is quite different than what is in that bug. Maybe because of the new symbols?
Comment 3•15 years ago
|
||
This doesn't appear to be a dup to me.
dbaron, do you know why we're walking the stack in release builds, and can we just avoid this?
This crash happens right as we're intentionally aborting, though, so we either need to solve the underlying problem or not block on this particular issue.
What version of Flash are you seeing this with? I don't see a crash with 10.2 final.
| Reporter | ||
Comment 5•15 years ago
|
||
I think the machine I was running on when I crashed might have Adblock Plus installed - I can check the next time in the office.
Comment 6•15 years ago
|
||
dbaron, can you take this? I think we want to fix this for beta so that we unmask the actual aborts which we might need to fix for final.
Assignee: nobody → dbaron
blocking2.0: ? → betaN+
Whiteboard: [hardblocker]
| Assignee | ||
Comment 7•15 years ago
|
||
We're walking the stack from here: <http://hg.mozilla.org/mozilla-central/log/62ae87cc7f02/xpcom/base/nsDebugImpl.cpp#l347>, which was added in bug 434076. Reading that bug, I don't see why we chose to do this in release builds as well.
I'm surprised we're using NS_DebugBreak in release builds... but I guess that's what NS_RUNTIMEABORT uses.
So I guess we should make that nsTraceRefcnt::WalkTheStack call #ifdef DEBUG.
| Assignee | ||
Comment 9•15 years ago
|
||
Comment on attachment 512195 [details] [diff] [review]
Disable stack walking in opt builds
r=dbaron
Attachment #512195 -
Flags: review?(dbaron) → review+
| Assignee | ||
Comment 11•15 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/c8dbb6a72520
I'm going to mark this as FIXED. New bugs should be filed for the aborts masked by this crash.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
Comment 12•15 years ago
|
||
Filed bug 634387, report of crash: https://crash-stats.mozilla.com/report/index/bp-e1867b53-1528-429a-990a-17b342110215
Updated•15 years ago
|
Crash Signature: [@ NS_StackWalk ]
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•