Bug 633383 - Only walk the stack when aborting in debug builds; r=dbaron a=blocking-betaN

Please note that this patch only fixes possible bogus crashes in
NS_StackWalk which prevent us from getting useful abort reports.